--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "db:seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.18.0",
     "next": "^16.0.0",
+    "next-auth": "^4.24.12",
     "prisma": "^6.18.0",
     "react": "19.2.0",
     "react-dom": "19.2.0"
