--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.18.0",
+    "bcryptjs": "^3.0.2",
     "next": "^16.0.0",
     "next-auth": "^4.24.12",
     "prisma": "^6.18.0",
