--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.18.0",
     "bcryptjs": "^3.0.2",
+    "lucide-react": "^0.548.0",
     "next": "^16.0.0",
     "next-auth": "^4.24.12",
     "prisma": "^6.18.0",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "react-spinners": "^0.17.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
