--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lucide-react": "^0.548.0",
     "next": "^16.0.0",
     "next-auth": "^4.24.12",
+    "next-themes": "^0.4.6",
     "prisma": "^6.18.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
