--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "db:seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.18.0",
     "bcryptjs": "^3.0.2",
@@ -25,7 +26,9 @@
     "prisma": "^6.18.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "react-spinners": "^0.17.0"
+    "react-hook-form": "^7.66.0",
+    "react-spinners": "^0.17.0",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
